Prevent line wrap in scroll indicator
Some locales provide a bit more text here.

--- a/app/assets/stylesheets/pageflow/entries.scss
+++ b/app/assets/stylesheets/pageflow/entries.scss
@@ -44,6 +44,7 @@
   .scroll_indicator {
     cursor: pointer;
     visibility: hidden;
+    white-space: nowrap;
 
     @include desktop {
       left: 8%;
